# PortflioAufgabe3CPP

./: CMakeLists.txt  DVD.cpp  DVD.h  Kunde.cpp  Kunde.h  Lager.cpp  Lager.h  Lagersystem.cpp  Lagersystem.h  main.cpp
FileProcessing/: FileExporter.cpp  FileExporter.h  FileReader.cpp  FileReader.h  Processor.cpp  Processor.h
Kunde/: Kunde.cpp  Kunde.h
Lager/: Lager.cpp  Lager.h
Produkte/: Bluray.cpp  Bluray.h  DVD.cpp  DVD.h  Disc.h
